tests/ui/invalid_frozen_pyclass_borrow.stderr
error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:10:18
    |
10  |     let borrow = foo.as_ref(py).borrow_mut();
    |                  ^^^^^^^^^^^^^^ ---------- required by a bound introduced by this call
    |                  |
    |                  expected struct `False`, found struct `True`
    |
note: required by a bound in `PyCell::<T>::borrow_mut`
   --> src/pycell.rs
    |
    |         T: PyClass<Frozen = False>,
    |                    ^^^^^^^^^^^^^^ required by this bound in `PyCell::<T>::borrow_mut`

error[E0271]: type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:20:18
    |
20  |     let borrow = child.as_ref(py).borrow_mut();
    |                  ^^^^^^^^^^^^^^^^ ---------- required by a bound introduced by this call
    |                  |
    |                  expected struct `False`, found struct `True`
    |
note: required by a bound in `PyCell::<T>::borrow_mut`
   --> src/pycell.rs
    |
    |         T: PyClass<Frozen = False>,
    |                    ^^^^^^^^^^^^^^ required by this bound in `PyCell::<T>::borrow_mut`
